--- a/mainApp/views/index.ejs
+++ b/mainApp/views/index.ejs
@@ -3,14 +3,14 @@
 <div class="container">
   <div class="head_text">Trending today</div>
   <div class="thrend">
-    <% for(var i=0; i<posts.length; i++) {%>
+    <% for(var i=0; i<trend.length; i++) {%>
         <div class="col-xs-6 col-md-3 trend_container">
           <a href="#" class="trend_block">
-            <div style="background: rgb(255, 255, 255) url('<%= posts[i].img %>') no-repeat scroll center center / cover;">
+            <div style="background: rgb(255, 255, 255) url('<%= trend[i].img %>') no-repeat scroll center center / cover;">
               <div class="text_on_trend_block">
-                <h2 class="trend_h2"> <%= posts[i].title%> </h2>
+                <h2 class="trend_h2"> <%= trend[i].title%> </h2>
                 <div class="split_text_on_trend">
-                  <%= posts[i].small %>
+                  <%= trend[i].small %>
                 </div>
               </div>
             </div>
@@ -19,7 +19,53 @@
     <% } %>
   </div>
 </div>
-
 <div class="container">
   <div class="head-text">Theme</div>
+  <div class="col-xs-6 col-md-8">
+    <% for(var i=0; i<post.length; i++) {%>
+        <a href="#123">
+          <div class="bs-callout bs-callout-info" style="border-left-color: <%= post[i].color %>" id="callout-alerts-no-default">
+            <div class="header-post">
+                <div class="post-avatar-img">
+                  <img src="<%= post[i].avatar %>" alt="" />
+                </div>
+                <div class="author-name">
+                  <p href="#3"><%= post[i].author %></p>
+                </div>
+                
+            </div>
+            <div class="title-post">
+              <h4><%= post[i].title %></h4>
+            </div>
+            <div class="content-post">
+                <%- post[i].content %>
+            </div>
+          </div>
+        </a>
+    <% } %>
+  </div>
+  <div class="col-xs-6 col-md-4">
+    <div class="col-xs-6 col-md-8">
+      <div class="panel panel-default">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>11</th>
+              <th>12</th>
+              <th>12</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>123</td>
+              <td>123</td>
+              <td>123</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
+
+<% include ./footer %>
